# roam

./: .dockerignore  .gitignore  .swiftlint.yml  Contributing.md  LICENSE-APACHE  LICENSE-MIT  README.md
AppIcons/: script.zsh
Roam/: GimmikScalarDelegate.swift  GlobalHotkey.swift  Info.plist  LatencyListener.swift  MetricManager.swift  PrivacyInfo.xcprivacy  Roam.entitlements  RoamApp.swift  RoamAppDelegate.swift  RoamMacOS.entitlements  RoamRelease.entitlements  ScreenshotCapture.swift  VolumeListener.swift  WatchConnector.swift  WindowFocusMonitor.swift
Roam.xcodeproj/: project.pbxproj
RoamCLI/: RoamCLI.swift  command.txt
RoamClip/: RoamClip.entitlements  RoamClipRelease.entitlements
RoamSwiftTests/: DequeTests.swift  LinkedListTests.swift  OrderedSetTests.swift  RoamDatabaseTests.swift  RoamSwiftTests.swift
RoamUITests/: RoamScreenshotTests.swift  RoamUITests.swift  RoamUITestsLaunchTests.swift
RoamWatch/: AppListView.swift  ButtonGridView.swift  DevicePicker.swift  IPhoneConnector.swift  Info.plist  RoamWatch.entitlements  RoamWatchApp.swift  RoamWatchAppDelegate.swift  RoamWatchRelease.entitlements
RoamWatchUITests/: RoamWatchScreenshotTests.swift  RoamWatchUITests.swift  RoamWatchUITestsLaunchTests.swift
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Readme.md  fly.toml  package.json  wrangler.toml
backend/.sqlx/: query-0aeef4a50c80118f6d790eb4650089d464746429688a3e17f377c29ff8d096ef.json  query-149e321c6a04ae17dc99a2dc072c6d1c57926a80cb4ef2a89faa7ac457f34eeb.json  query-2a49160fed1a8093ddcf04a644f62e26bf95d759cba8c685a244d1b18e50339a.json  query-333c8c8841a246e1b2610b4e966432327995dc4f37a36d31474ae89813029173.json  query-337a71f2a717c9194b157952144e7f9958e6f27df2a1ad80d1e59998f56f63e2.json  query-566d862aa7a5c33a280bdedaa74e0553c3dea13ec50f72011518a7c676fccbdf.json  query-7e7fce642e48ddbffb00c7f23b517a4ecdc294239dbf079eaa323f05f3775e86.json  query-82c1a995d59b2c8881624543c63e8f9a145950f6aec49da7275db4392d41b05f.json  query-84221715ab1d86b2ce514812da1bd4a9f4b468b4385b2b0d16cc6c001fd56332.json  query-97a34b1f63271f9528f2f2cee4ac7388f72b79ce3eb03cf5fa555f8d4d2343f6.json  query-a24ddc93f85d77fb32be0995431fd9244fb862c28d502fc7bf8b5d83a6d03450.json  query-b85df50b5f7af7f0804058dfb24843be0bf7473454273b126053befd22dde998.json  query-bf5a4ed47abafacb4a136f35a1f10d49cfa6524f50e459f6a17dc45d9a60f280.json  query-c9817dd9a350b8a8d2b5bfbbc09cf7d8de51ff564c13e20347126b6a21d4ca20.json  query-dbb39cff9cd29b96b045049d54c506e163ff3c4f86bd758c332a057cce5467d1.json  query-e843f2d9e86370b37ca729894d4bd5233c2ec7c758ac76c7febe03a14d73c015.json  query-f07df92d1f981564c68dc7ff90ac24f8f3793763707d2d1e022c8d16cd403c6f.json
backend/deploy/: roam-symbolicator.env.example  roam-symbolicator.service
backend/migrations/: 20250121024817_initial.down.sql  20250121024817_initial.up.sql  20250121190418_dump.down.sql  20260504120000_pending_symbolications.down.sql  20260504120000_pending_symbolications.up.sql  20260507120000_user_ai_disabled.down.sql  20260507120000_user_ai_disabled.up.sql
backend/src/: ai_responder.rs  ai_responder_roam_docs.md  apns.rs  apns.ts  cli.rs  database.rs  discord.rs  discord.ts  gateway.rs  index.ts  lib.rs  logging.rs  main.rs  presence.rs  server.rs  tasks.rs  utils.rs
backend/src/symbolicate/: diagnostics.rs  mod.rs  sym.rs  symbolicate.rs  test-crash-payload.json  tests.rs  worker.rs
backend/test/: concurrency-test.py
backend/testing-support/: mkmetrickit-upload.json
backend/testing-support/dSYMs/Roam.app.debug.dSYM/Contents/Resources/DWARF/: Roam
backend/testing-support/dSYMs/Roam.app.debug.dSYM/Contents/Resources/DWARF/Roam.dSYM/Contents/: Info.plist
backend/testing-support/dSYMs/Roam.app.debug.dSYM/Contents/Resources/DWARF/Roam.dSYM/Contents/Resources/DWARF/: Roam
backend/testing-support/dSYMs/Roam.app.debug.dSYM/Contents/Resources/DWARF/Roam.debug.dylib.dSYM/Contents/Resources/DWARF/: Roam.debug.dylib
backend/testing-support/dSYMs/Roam.debug.dylib.dSYM/Contents/: Info.plist
backend/testing-support/dSYMs/Roam.debug.dylib.dSYM/Contents/Resources/DWARF/Roam.debug.dylib.dSYM/Contents/Resources/DWARF/: Roam.debug.dylib
(+581 files in other folders)
