[package]
name = "roam-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = [
    "macros",
    "rt-multi-thread",
    "tracing",
    "signal",
    "fs",
    "io-util",
    "process",
    "sync",
] }
serde = { version = "^1", features = ["derive"] }
dotenvy = "^0.15"
futures = "^0.3"
anyhow = "^1"
uuid = "^1.17"
base64 = "^0.22"
chrono = { version = "^0.4", default-features = false, features = ["serde"] }
ahash = "^0.8"
thiserror = "^2"
serde_json = "^1"
regex = "^1.11"
object = { version = "0.36.7", default-features = false, features = ["read"] }
zip = { version = "=4.6.1", default-features = false, features = ["deflate-flate2"] }

clap = { version = "^4.5", features = ["derive", "env"] }
clap_derive = { version = "^4.5" }

a2 = { version = "^0.10", features = [
    "ring",
    "tracing",
], default-features = false }
reqwest = { version = "^0.12", default-features = false, features = [
    "json",
    "multipart",
    "rustls-tls",
] }
serenity = { version = "^0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
sqlx = { version = "^0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "sqlite",
    "macros",
    "chrono",
    "uuid",
    "json",
    "migrate",
] }


memmap2 = { version = "^0.9" }
tokio-util = { version = "^0.7", features = ["io"] }
portable-pty = "^0.9"
samply-symbols = { version = "^0.24.1", features = ["send_futures"] }
symbolic-common = "^12"
symbolic-demangle = { version = "^12", features = ["swift", "cpp"] }

tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-opentelemetry = "^0.31"
opentelemetry = { version = "^0.30" }
opentelemetry_sdk = { version = "^0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "^0.30", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "^0.30"

axum = { version = "^0.8", features = ["http2", "macros", "ws"] }
axum-macros = "^0.5"
tower = "^0.5"
tower-service = "^0.3"
tower-http = { version = "^0.6", features = [
    "cors",
    "trace",
    "catch-panic",
    "request-id",
    "fs",
    "util",
    "validate-request",
] }

[dev-dependencies]
tempfile = "^3"
